# lowSpag2

./: .gitmodules
vm/: .oldmkefile  CMakeLists.txt  lowSpag2VM  temptest.bin.bak  test.asm.lsx  testbanks.lsx
vm/src/: CMakeLists.txt  cpu.cpp  cpu.h  main.cpp  num.h  ram.cpp  ram.h
